# Setting-Up-SSH-with-GitHub

./: readme.md
Asm/: organize_files.sh
Asm/Folder_File.s/: as.sh  findMax.s  findMin.s  test  test.s
Asm/Folder_bash/: helloWorld
Cpp/AI/: knn
Cpp/Algorithm/: Makefile  a.out  array.cpp  array.h  main  main.cpp  main.h  mergeSort.cpp  mergeSort.h  note.txt
Cpp/DataStruct/: AbstrarctDT.cpp  _Queue.cpp
Cpp/Function/: LEqual.cpp  mayBanHang  mayBanHang.cpp
Cpp/GPT_CODE/: Knn.cpp  Os.cpp  os
Cpp/Operator/: BuildOs  BuildOs.cpp  Chorono  Chorono.cpp  Graphic  Graphic.cpp  bos  output
Cpp/Operator/myProject/: .clang-format  CMakeLists.txt  buildOs  buildOs.cpp  document  main.cpp  saveAction.txt
Cpp/Technical/: leetCode  leetCode.cpp  print_odd_even  print_odd_even.cpp
Cpp/my_project/: CMakeLists.txt
Go/: arrays.go  bitwise_operator.go  constants.go  defer_panic_recover.go  error_handling.go  formatingVrebs.go  function.go  g  go_slices.go  helloworld.go  loop.go  map.go  multipleVariable.go  output_function.go  struct.go  variableTypes.go
Go/student-manager/: go.mod  main.go
Java/: buildMvn.bash  document.txt.save
Java/JavaPractice/: Calculator.java  Prat8.java  Prat9.java  prat.java  (+6 more)
NLP/: analys.py  lbr.cpp  scratch.py
Py/: BasicText.py  BasicText2.py  PDF.py  Regular.py  Scratch.py  Tfidf.py  btfs.py  doc.txt  pdfDeThi.py  practRe.py  test.txt  vocab.txt
ShellScript/: List.bash  mdTmpl.bash  read_file_cpp.bash  toDoList.txt  workspace_SHELL_PYTHON.code-workspace
Web/: index.html  introduction.html  road_map.html  story_page.html
(+63 files in other folders)
